# character-creator-app

./: .gitignore  Cargo.toml  README.md  build.rs  index.html
assets/: normalize.sass  style.sass  theme.sass
src/: app.rs  editions_page.rs  entities.rs  lib.rs  main.rs  state.rs
src-tauri/: Cargo.toml  tauri.conf.json
